--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "pdf-merger-js": "^5.1.2",
     "pixelmatch": "^6.0.0",
     "pngjs": "^7.0.0",
+    "pnpm": "^9.6.0",
     "postcss": "^8.4.40",
     "postcss-cli": "^11.0.0",
     "postcss-inline-svg": "^6.0.0",
